--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,7 +1,8 @@
 .card {
-  width: 25%;
+  width: 25vw;
   height: 440px;
   padding: 15px;
+  z-index: 2;
 }
 
 .container {
@@ -82,12 +83,12 @@
 
 @media screen and (max-width: 1200px) {
   .card {
-    width: 33.33%;
+    width: 33.33vw;
   }
 }
 
 @media screen and (max-width: 700px) {
   .card {
-    width: 100%;
+    width: 100vw;
   }
 }
