--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -81,6 +81,11 @@
   border-right: 1px solid #c2c2c2;
 }
 
+.btn_edit:hover,
+.btn_delete:hover {
+  color: #32a5ed;
+}
+
 @media screen and (max-width: 1200px) {
   .card {
     width: 33.33vw;
